// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Upload should render 1`] = `
<DocumentFragment>
  <div
    class="jsx-d4c9c6026fdaac1b dropZoneComponent"
    role="presentation"
    tabindex="0"
  >
    <input
      aria-label="file upload"
      class="jsx-d4c9c6026fdaac1b"
      multiple=""
      style="border: 0px; display: block; height: 0px; margin: 0px; opacity: 0; overflow: hidden; padding: 0px; width: 0px;"
      tabindex="-1"
      type="file"
    />
    <div
      class="jsx-d4c9c6026fdaac1b text"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        Simply drag'n'drop files
        <br
          class="jsx-d4c9c6026fdaac1b"
        />
        or click to select files to upload.
      </p>
    </div>
    <div
      class="jsx-d4c9c6026fdaac1b uploadFeedback float"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        There was an error while uploading your files. At the moment, we support 
        <em>
          composer.json
        </em>
        , 
        <em>
          *.csproj
        </em>
        , 
        <em>
          packages.config
        </em>
        , 
        <em>
          Gopkg.lock
        </em>
        , 
        <em>
          Gemfile.lock
        </em>
         and 
        <em>
          requirements.txt
        </em>
        . Please try again. If the problem persists, please contact us.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Upload should render with feedbackPosition 1`] = `
<DocumentFragment>
  <div
    class="jsx-d4c9c6026fdaac1b dropZoneComponent"
    role="presentation"
    tabindex="0"
  >
    <input
      aria-label="file upload"
      class="jsx-d4c9c6026fdaac1b"
      multiple=""
      style="border: 0px; display: block; height: 0px; margin: 0px; opacity: 0; overflow: hidden; padding: 0px; width: 0px;"
      tabindex="-1"
      type="file"
    />
    <div
      class="jsx-d4c9c6026fdaac1b text"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        Simply drag'n'drop files
        <br
          class="jsx-d4c9c6026fdaac1b"
        />
        or click to select files to upload.
      </p>
    </div>
    <div
      class="jsx-d4c9c6026fdaac1b uploadFeedback inside"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        There was an error while uploading your files. At the moment, we support 
        <em>
          composer.json
        </em>
        , 
        <em>
          *.csproj
        </em>
        , 
        <em>
          packages.config
        </em>
        , 
        <em>
          Gopkg.lock
        </em>
        , 
        <em>
          Gemfile.lock
        </em>
         and 
        <em>
          requirements.txt
        </em>
        . Please try again. If the problem persists, please contact us.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Upload should render with style 1`] = `
<DocumentFragment>
  <div
    class="jsx-d4c9c6026fdaac1b dropZoneComponent"
    role="presentation"
    style="border: 1px solid red;"
    tabindex="0"
  >
    <input
      aria-label="file upload"
      class="jsx-d4c9c6026fdaac1b"
      multiple=""
      style="border: 0px; display: block; height: 0px; margin: 0px; opacity: 0; overflow: hidden; padding: 0px; width: 0px;"
      tabindex="-1"
      type="file"
    />
    <div
      class="jsx-d4c9c6026fdaac1b text"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        Simply drag'n'drop files
        <br
          class="jsx-d4c9c6026fdaac1b"
        />
        or click to select files to upload.
      </p>
    </div>
    <div
      class="jsx-d4c9c6026fdaac1b uploadFeedback float"
    >
      <p
        class="jsx-d4c9c6026fdaac1b"
      >
        There was an error while uploading your files. At the moment, we support 
        <em>
          composer.json
        </em>
        , 
        <em>
          *.csproj
        </em>
        , 
        <em>
          packages.config
        </em>
        , 
        <em>
          Gopkg.lock
        </em>
        , 
        <em>
          Gemfile.lock
        </em>
         and 
        <em>
          requirements.txt
        </em>
        . Please try again. If the problem persists, please contact us.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
